# mini_code

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  celery_worker.py  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  jinjiang2.psd  jinjiang3.psd  pyproject.toml  requirements.txt  run.py
assets/templates/: 数据主题-导入变量模板.xlsx
backend/: app.py  extensions.py
backend/alarm/api/: __init__.py
backend/alarm/domain/: __init__.py  alarm.py  alarm_rule.py
backend/alarm/schema/: alarm.py  alarm_rule.py
backend/alarm/service/: __init__.py  alarm.py  alarm_rule.py
backend/business/api/: __init__.py
backend/business/domain/: __init__.py  product.py
backend/business/schema/: product.py
backend/business/service/: __init__.py  auth.py  enums.py  product.py
backend/license_management/api/: __init__.py
backend/log/: __init__.py
backend/log/api/: __init__.py
backend/role/: message.py
backend/user/: message.py
conf/casbin/: rbac_with_resource_roles_model.conf
kit/: exceptions.py  filename.py  logging.py  message.py  settings.py
kit/connection/: db.py
kit/domain/: entity.py  field.py  types.py
kit/hook/: __init__.py  casbin.py  redis.py  sio.py  sqla.py
kit/repository/: generic.py  sqla.py
kit/schema/: base.py  field.py  validator.py
kit/service/: base.py  mixin.py
kit/sf_api/: api.py
kit/util/: blueprint.py  casbin.py  datetime.py  file.py  hash_func.py  json.py  response.py  sqla.py
kit/wechatpayv3/: __init__.py  core.py  utils.py
requirements/: development.txt  production.txt
task/: __init__.py  conf.py  dongwen_logistics.py  log.py  order_tasks.py
task/logistics_task/: dongwen_logistics.py
task/order_log/: user_log_processor.py
task/strategy_analysis/: analysis.py  load_parameter.py  parameter_mock.py
tests/: funcetxt.py
tests/helper/: dummy_sources.py
tests/operator/: func2.py
tests/xyn/: mq_consumer.py  mq_produc.py
(+218 files in other folders)
