[tool.poetry]
name = "backend-backend"
version = "0.1.0"
description = "Ikas Advanced Process Control System."
authors = ["huangkai <huang.kai@ikasinfo.com>"]
license = "IKAS"

[tool.poetry.dependencies]
python = "3.9.*"
loguru = "^0.6.0"
flask = "^2.1.2"
flask-sqlalchemy = "^2.5.1"
marshmallow-dataclass = { extras = ["enum", "union"], version = "^8.5.8" }
flask-smorest = "^0.38.1"
python-dotenv = "^0.20.0"
environs = "^9.5.0"
pymysql = "^1.0.2"
flask-migrate = "^3.1.0"
faker = "^13.15.0"
factory-boy = "^3.2.1"
typer = "^0.5.0"
redis-py-cluster = "^2.1.3"
python-socketio = { extras = ["client"], version = "^5.7.1" }
sqlalchemy = { extras = ["mypy"], version = "^1.4.39" }
types-redis = "^4.3.11"
casbin = "1.18.2"
casbin-sqlalchemy-adapter = "^0.5.0"
flask-jwt-extended = {extras = ["asymmetric_crypto"], version = "^4.4.3"}
requests = "^2.28.1"
celery = {version = "5.2.0", extras = ["auth", "eventlet", "py-amqp", "msgpack", "redis"]}
flower = "^1.2.0"
gunicorn = "^20.1.0"
eventlet = "0.30.2"
pandas = "^1.5.0"
openpyxl = "^3.0.10"
oracledb = "^1.1.1"
confluent-kafka = "^2.0.2"
pycryptodome = "3.17"
netifaces = "0.11.0"
reportlab = "4.0.0"
apache-skywalking = {extras = ["all"], version = "^1.0.1"}
gevent = {version = "21.1.1", platform = "linux"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.1"
mypy = "^0.971"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = ['py39']
skip-string-normalization = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.poetry.source]]
name = "aliyun"
priority = "default"
url = "https://mirrors.aliyun.com/pypi/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
